fixed weird spacing

--- a/sass/Homepage.scss
+++ b/sass/Homepage.scss
@@ -43,6 +43,12 @@
 	}
 }
 
+.container{
+	.product-info{
+		margin: 0;
+	}
+}
+
 // Testimonial styling
 .testimonials{
 	background-color: #d5dae0;
